# 15721-s24-scheduler1

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
proto/: scheduler.proto  scheduler_api.proto
scheduler/: Cargo.toml  build.rs
scheduler/proto/: executor.proto  scheduler.proto
scheduler/src/: bench.rs  cli.rs  executor.rs  integration.rs  lib.rs  mock_executor.rs  orchestrator.rs  parser.rs  proto_server.rs  queue.rs  scheduler.rs  scheduler_service.rs  utils.rs
scheduler/src/example_data/: orders.csv  prices.csv
scheduler/src/tpch-datafusion/customer/: part-0.parquet  part-1.parquet  part-10.parquet  part-11.parquet  part-12.parquet  part-13.parquet  part-14.parquet  part-15.parquet  part-2.parquet  part-3.parquet  part-4.parquet  part-5.parquet  part-6.parquet  part-7.parquet  part-8.parquet  part-9.parquet
scheduler/src/tpch-datafusion/nation/: part-0.parquet
scheduler/src/tpch-datafusion/orders/: part-0.parquet  part-1.parquet  part-10.parquet  part-11.parquet  part-12.parquet  part-13.parquet  part-14.parquet  part-15.parquet  part-2.parquet  part-3.parquet  part-4.parquet  part-5.parquet  part-6.parquet  part-7.parquet  part-8.parquet  part-9.parquet
scheduler/src/tpch-datafusion/part/: part-0.parquet  part-1.parquet  part-10.parquet  part-11.parquet  part-12.parquet  part-13.parquet  part-14.parquet  part-15.parquet  part-2.parquet  part-3.parquet  part-4.parquet  part-5.parquet  part-6.parquet  part-7.parquet  part-8.parquet  part-9.parquet
scheduler/src/tpch-datafusion/partsupp/: part-0.parquet  part-1.parquet  part-10.parquet  part-11.parquet  part-12.parquet  part-13.parquet  part-14.parquet  part-15.parquet  part-2.parquet  part-3.parquet  part-4.parquet  part-5.parquet  part-6.parquet  part-7.parquet  part-8.parquet  part-9.parquet
scheduler/src/tpch-datafusion/region/: part-0.parquet
scheduler/src/tpch-datafusion/supplier/: part-0.parquet
src/: integration.rs  lib.rs  main.rs  parser.rs  proto_server.rs  queue.rs  scheduler.rs
src/example_data/: orders.csv  prices.csv
src/substrait/: substrait.extensions.rs  substrait.rs
