[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chronos"
path = "src/lib.rs"

[[bin]]
name = "scheduler-service"
path = "src/scheduler_service.rs"

[[bin]]
name = "executor-service"
path = "src/executor.rs"

[[bin]]
name = "scheduler-cli"
path = "src/cli.rs"

[dependencies]
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-proto = { workspace = true }
tonic = "0.11"
lazy_static = "1.4.0"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
async-recursion = "1.0.5"
more-asserts = "0.3.1"
futures = "0.3.30"
anyhow = "1.0.82"
clap = "4.5.4"
bytes = "0.4.12"
ahash = "0.8.11"

[build-dependencies]
tonic-build = "0.11"
